--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==0.10.1
-pymongo==3.0.3
-beautifulsoup4==4.4.1
-requests==2.8.0
-passlib==1.6.5
+Flask==1.0.2
+pymongo==3.7.2
+beautifulsoup4==4.7.0
+passlib==1.7.1
+requests==2.21.0
+uwsgi
